# cloud-builder

./: .cloudbuilder.json.example  .sync_rules.example  README.md  README_zh.md  main.py  mcp.json.example  pyproject.toml
src/config/: __init__.py  config_loader.py
src/log_config/: logging_config.py
src/mcp_resources/: __init__.py  prompts.py  resources.py
src/mcp_tools/: __init__.py  command_tools.py  file_tools.py  sync_tools.py
src/rclone/: rclone_decrypt_pass.py  rclone_executor.py  rclone_operations.py
src/ssh/: __init__.py  ssh_client.py
src/utils/: __init__.py  ansi_utils.py  error_utils.py
tools/rclone/: readme.txt
